--- a/.github/workflows/dynamic-content-injection.yml
+++ b/.github/workflows/dynamic-content-injection.yml
@@ -2,6 +2,7 @@ name: Dynamic README content injection
 on:
   schedule:
     - cron: "0 * * * *"
+  workflow_dispatch:
 jobs:
   update-readme-with-blog:
     name: Updates blog articles from blocs.fr
