--- a/.github/workflows/dynamic-content-injection.yml
+++ b/.github/workflows/dynamic-content-injection.yml
@@ -4,7 +4,35 @@ on:
     - cron: "0 * * * *"
   workflow_dispatch:
 jobs:
+  update-readme:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Init README with dynamic content
+        uses: actions/setup-node@v1
+        with:
+          node-version: 14.6.0
+
+      - run: yarn
+
+      - run: node .
+
+      - name: Add to git repo
+        run: |
+          git config pull.rebase false
+          git pull
+          git add .
+          git config --global user.name "Slals"
+          git config --global user.email "jonathan@blocs.fr"
+          git commit -m "[Automated] README updated with dynamic contents"
+      - name: Push
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+
   update-readme-with-blog:
+    needs: update-readme
     name: Updates blog articles from blocs.fr
     runs-on: ubuntu-latest
     steps:
