--- a/.github/workflows/dynamic-content-injection.yml
+++ b/.github/workflows/dynamic-content-injection.yml
@@ -39,4 +39,4 @@ jobs:
       - uses: actions/checkout@v2
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
-          feed_list: "https://blocs.fr/feed.xml"
+          feed_list: "https://blocs.fr/index.xml"
