--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Slals",
   "version": "1.0.0",
-  "description": "Bienvenue sur mon profil :)",
+  "description": "Jonathan Serra - Chief Technology Officer & Tech Lead & Open Source Advocate",
   "main": "index.js",
   "repository": "git@github.com:Slals/Slals.git",
   "author": "Slals <jonathan@blocs.fr>",
